# game

./: .gitignore  README.md  pyproject.toml
assets/: README_ASSETS.md
scripts/: generate_sounds.py
src/: __main__.py  config.py  game.py
src/entities/: food.py  obstacle.py  snake.py
src/managers/: resource_manager.py  score_manager.py  sound_manager.py
src/scenes/: base_scene.py  game_over_scene.py  menu_scene.py  pause_scene.py  play_scene.py
src/utils/: helpers.py
tests/: conftest.py  test_food.py  test_score_manager.py  test_snake.py
