[project]
name = "snake-game"
version = "1.0.0"
description = "经典贪吃蛇游戏 - Pygame 豪华版"
authors = []
requires-python = ">=3.8"
dependencies = [
    "pygame>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
